# ChangeLog for net-mail/mailman
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/mailman/ChangeLog,v 1.148 2015/03/29 13:08:58 hanno Exp $

*mailman-2.1.19 (29 Mar 2015)

  29 Mar 2015; <hanno@gentoo.org> -mailman-2.1.14.ebuild,
  -mailman-2.1.15.ebuild, -mailman-2.1.17.ebuild, +mailman-2.1.19.ebuild,
  +files/50_mailman.conf-r2:
  Bump, remove old apache 2.2 directives, remove old versions.

  31 Dec 2014; Agostino Sarubbo <ago@gentoo.org> mailman-2.1.18_p1.ebuild:
  Stable for ppc, wrt bug #530772

  28 Dec 2014; Agostino Sarubbo <ago@gentoo.org> mailman-2.1.18_p1.ebuild:
  Stable for x86, wrt bug #530772

  27 Dec 2014; Agostino Sarubbo <ago@gentoo.org> mailman-2.1.18_p1.ebuild:
  Stable for amd64, wrt bug #530772

  02 Nov 2014; Sven Vermeulen <swift@gentoo.org> mailman-2.1.17.ebuild,
  mailman-2.1.18_p1.ebuild:
  Remove sec-policy/selinux-* dependency from DEPEND but keep in RDEPEND (bug
  #527698)

  13 Aug 2014; Agostino Sarubbo <ago@gentoo.org> mailman-2.1.17.ebuild:
  Stable for ppc, wrt bug #510138

*mailman-2.1.18_p1 (23 Jun 2014)

  23 Jun 2014; Hanno Boeck <hanno@gentoo.org> +mailman-2.1.18_p1.ebuild:
  Bump, new dependency dnspython.

  22 Jun 2014; Chema Alonso <nimiux@gentoo.org> mailman-2.1.17.ebuild:
  Stable for amd64 wrt bug #510138

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> mailman-2.1.17.ebuild:
  x86 stable wrt bug #510138

*mailman-2.1.17 (11 Apr 2014)

  11 Apr 2014; Hanno Boeck <hanno@gentoo.org> +mailman-2.1.17.ebuild:
  Version bump.

  08 Jan 2014; Mike Frysinger <vapier@gentoo.org> mailman-2.1.14.ebuild,
  mailman-2.1.15.ebuild:
  Inherit the user eclass for enewuser/etc...

  22 Oct 2013; Fabio Erculiani <lxnay@gentoo.org> mailman-2.1.15.ebuild,
  +files/mailman.service:
  add systemd unit to mailman-2.1.15

  22 Jun 2013; Sven Vermeulen <swift@gentoo.org> mailman-2.1.14.ebuild,
  mailman-2.1.15.ebuild:
  Adding selinux-mailman dependency as per bug #473014