@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm prepare setup
+DEPEND=virtual/mta virtual/cron virtual/httpd-cgi dev-python/dnspython =dev-lang/python-2* virtual/pkgconfig
+DESCRIPTION=A python-based mailing list server with an extensive web interface
+EAPI=4
+HOMEPAGE=http://www.list.org/
+IUSE=selinux
+KEYWORDS=~amd64 ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=virtual/mta virtual/cron virtual/httpd-cgi dev-python/dnspython selinux? ( sec-policy/selinux-mailman ) =dev-lang/python-2*
+SLOT=0
+SRC_URI=mirror://sourceforge/mailman/mailman-2.1.20.tgz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	python	3a270b7b1d1e679847ff0faeac25c5a3	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=9d81d10a782ab69209c5da8ac48225a5
