@@ -11,24 +11,26 @@ AUX mailman.rc 597 SHA256 ef4f5482cf68ba44a0fbb83acde29295bd8dcb6512d259d14387df
 AUX mailman.service 288 SHA256 6cd1c76bac4ce0c6e15886089a62ed70012653a6416fc1d0c0836822b58e7c02 SHA512 c4a5532666afbebc5aa69463ec9b9eaa2dcb03fdd8fd62307920a4572d0c795c1d93478236240746018be617c0eec0fcfcc1c711e8810140fb8ffbc0a9b71009 WHIRLPOOL 0980699e58b2b86789ea7bd2172063359a12f97d7df1cea27ada1dea77ec8a7c3426f1aca1c3bbf982d97b72ac1ee3ff28b49f651d8a066ea80a6d0ca20135c3
 DIST mailman-2.1.18-1.tgz 9095511 SHA256 ce70ed8b58d719cab80758f39a7258c0a28f8e8e859facdaa8c29add620a5c2c SHA512 ec00bf98e7ecf452a394b0afd444f86108308aba410667482170df8b3042984715ed3c8aa645cd2aeaca58d239c03548c69907c3217f2a9f88fd859e9762c15b WHIRLPOOL 28b2bedc94b3a1c9e2f6fb2345e5afe8b2b18da689d2366e6d71ce94451138e36e81779dc3862a36b179063a6250c79adb40ba72d5b082cbfdf348f036e69b8d
 DIST mailman-2.1.19.tgz 9185697 SHA256 cb33429797f7b8b3b3f86bd528192ebc9de9df990257df8d482384c687e22014 SHA512 a89949dd8c27dba72a791f75373169989bf863d2fd73187902fdcd45b495871498eca6b6e4608f8aa049161637c59c9005ba9a88d6d8d5e3d344f19c71ced37a WHIRLPOOL 34580883b1f859b0563cd43c85b82b3834ff668400decea52a0d2d974d7b0cb9e8b04c650186a7764b8a966b12d83ad0a82b8677fb8458c59f55f1042e522b97
+DIST mailman-2.1.20.tgz 9204867 SHA256 522c2b5c5ab91398fdf949a8961162c314f6323cd1bfeb907e0fb2d88277711f SHA512 2821ce9f22f7f927f3f3e51ad949b43066be4510aa781c63de1acdc8bec5408e242ece7e83bbf77affcdab61fa9715cb239ceed197cda647e8e56308ba9adce7 WHIRLPOOL 4678622b8e98654fe551bf00f3afebaef2e6df49f13755c2277a696b7aaf0a7e6f261a94c190ed212465d6b81be9121a66ca454c998861b3b73ddbdbef3e9095
 EBUILD mailman-2.1.18_p1.ebuild 6223 SHA256 d650a6d81d95200d56a0c6083293978c7c996ad1aa98d20a6de76eb5c2983704 SHA512 1f45844fcd8b582788b229a2c533a0b89fda6b1b2e22ac931d9da3e12d8dba0fa5a484e64ed29559bc1c2cafabad203215147ba0064b094ce1d7a2edb6484d88 WHIRLPOOL 08981fe939d71325f96e3c80fc040329bb78b1e2c4505172bc5c7eddd65dc4edc694cb63352eb68912a01286edb349be29b524b7f08bee89657b3823a77a1d8c
 EBUILD mailman-2.1.19.ebuild 6225 SHA256 cace7ebe3d87167a241d75c758137efc9a47eb5b766a10ad21bde8a2bea2dec1 SHA512 7cc1ef492725bf3520ebf33ea159f40e97a7fe5ab0198e8818f7e8dfde2c9b1b4a9556a7d72b8cda727606e7fd38af8d3a52a7df8ec0e3fb04c9a6b6d497d8d7 WHIRLPOOL 9e3883376926847159aae50fd08d980996afea1a02228d3dcb65042b8b08019412554a9d9249dcaf46b08019fa09a3d6240a71341ff19cfdf3beec193985adf2
-MISC ChangeLog 20517 SHA256 264c35e885fa543359c1d5fdf097c2179f58fe07cdac6efb1852396742582dbb SHA512 e990111fc31b767d1a22e0dd92fac73a368620d4d4f585acc28cc017a405dbc0f5d144189868b35ee20bf9356bb977ffd60ba18b42fa085eadbe1b8dc8a9dcb0 WHIRLPOOL 1e36b54419dde5a77aa7930dd72782b78aa62e7582ac08ff58ce50969f1159c9cbb5ee172d89dc764d7f7c0b4646b2e522f3272a42bd2b1c4cb55de09aff785b
+EBUILD mailman-2.1.20.ebuild 6225 SHA256 da39f14c55a9d3a0ac4d299bc591229532edeb1ff74edb8c3347f28f6ef90803 SHA512 522f2575db3c785f18f8fed2cfdfef9f86adef58de4f00a75fbe610087e54e4c579c7dd73b208da4ffa2d03ca25e91d2e37f9f9aa495179945cc56e93400b332 WHIRLPOOL d196fe2847c8d14caff89b83ccacb42e5919d39fe3b65dc4adff3f90e516cb1e29ec35ccb36d0a008e8ae1c43cca9d8fe3c95194ff49203a80f47363c3a880e4
+MISC ChangeLog 20655 SHA256 f4321986e15bcf506e2b361ebf7d54dee45d40cb00e98285d51d05df730fb9e1 SHA512 0fb4b8798d79f8d4575ababc5621163ef3da9321c056cdc1c16d1f3ae501d5b76b03de4c9c450704d692b8d55ea7f7cc434020377093e933fb0289259b1cf662 WHIRLPOOL 1e291b5a20c76b0fa3779b5797624e9f444fcfb7663fe885fb0c8cf8642b699db3130a3e4c776c546395fa51edfa1e70167c82461fa9ff14882193c6d5a6552b
 MISC metadata.xml 218 SHA256 09421ca1b9299683d07f68ddbbd3ed97251dac613121b420841a3251da7fcb89 SHA512 8bb5bbe8e06a6caffb45c8a717c3fce94b35fd085a711523d439b3135f3949e46f8b7ae1936aa75ea6385fc59054585009ff16fe73052c3eccaea09449204544 WHIRLPOOL aaa5590db64b60ddb7628f0e9ea780da50f0e43a7f10a6562848d9167dfdfbec531aff68f7df2da2b173e9900b91e40b5ff9cf4ecab86dbff8c082053a53b90c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVF/l2AAoJEKWIAHK7tR5CHm0P+wWO0rW4EpIptwqg7goHLG35
-c8mI8Ti773K0EohN3jAcKCgb4Ge3peS2GHpzma+RD9HWL834048ABmwAw8pQF0n/
-cY6ccEDc1FWVatdd66XZybzNqE5SLsCzcnRqnI86zlOInLyXLv3P5Qh3SVS+qGVO
-QmIc+BkbFD714xJ+svAWdoWpqCUM7sLdAt0hQKEi5+LAeGB3OPGqCE5uP35TqU0l
-vL9Vu+IEFtfsD8+HUiiGLtIT0jEjyImMO8X8g1+RCMpxlQ1eoqfI8e5+aB6UrEsp
-xJ/Jsn7N131k7vEGuHT5gtlHfWWBZNY32AWvbyumPTQcAKZwU685/7MOEESyHHQo
-mBcqZHim0vdK5V0s5nEkwFKw2G5qFq/NMjYAseIeVDBg2o1AlkiJ43nexiWuVmGE
-BVAYw5woxdPsIsB6G0wG/RL6Qx9AOQhfOMTanAwb+I7RjvpNzfmzeAZxROwcnKwZ
-WAlNrKvYY0OLIadVIMsqCDBXwWKyF3uV57VXrddkwYo4Z7Q2sSpAmRY64DBiPb4/
-3/l5o/72+RcP5UN+ZJgjqCR+u/ZeHRENttScdyf2cD5QCqumTIiy2rqR27lAUinf
-zfjPFJBVD0E0TV215hQ8mXlaoW8lrdfPB5Xvz9bf2v7jAdzNjzEEg3JQNUVHmS8W
-tKaeRdCdVqLL5GkVBmNh
-=+o0I
+iQIcBAEBCAAGBQJVGyQXAAoJEKWIAHK7tR5CtbgP+wd4XJ6tBC26OZ/mEKV7NDel
+Qdvk+72okH0pU+Uf2p0OxyMT5tF+AVPc1VtK3kC5tkX1RBUj26GTu0NHuBFFeZQB
+F/VAf+S9/Ji1ZFCF+5etdjaffcC3syiCCFxtSGwLmWMBN7wv3cAv+r47tPG8Sph9
+JhBiUmnGxCBFXBCwBmYdnqSUegj78o2XlBBpiZAWhMP2lcvRTWWTKLvTK1h6kMwJ
+aMBvh6tnmT7t5BetpMeOzD06+hV4q26BhBI8A+z6G9QrlAWE9JQR54hlWicamB8j
+n7dTQGvizKVq+YwRer2ZaXmhxDNtA9+Jfb9jwOJGJ6nn2PGcsXa9LNp7jJl3MEss
+ykVk6MKhHvmuP6WE8YkjoE+Hw6GedVf8gfbxukvUIuuykTsylfOL4OL6x/auFysq
+F/i/Ba9Lksb3tu7ZmkeUMskhOU3i4RKDEfvzTudfT4/WPCXJWQWGF5hPPBWPZgLr
+Wxz6LEC5FMUeqyYJ4NSGhgwWxZzoSr1UR0DHRRQ+x2GDz1oyaN9iLuQ0TwYm4IzR
+mUNGOABfMQppg08XqP9ePATXKQc/kSjXmMguiJtyPF9bUadQd2NFU6lQDMp4/GUl
+DDlcVVBS5a+jcoYUqaQ2cBgP32MXzJVBEqjI0gzV0eDYMu/fldXjdU8bXWcOr4gS
+SHOvuU8kahbAkLNkQjwR
+=dcXY
 -----END PGP SIGNATURE-----
